--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -7,7 +7,7 @@
       <meta charset="utf-8">
       <title>Got Spoil</title>
    </head>
-   <body>
+   <body class="custombody">
    
       <div class="top-bar">
          <h4 class="text-left">Got Spoil</h4>
@@ -15,7 +15,7 @@
       
       <div class="container" id="app">
          <div class="row column text-center">
-            <h5>Saison {{ season }}</h5>
+            <h4>Saison {{ season }}</h4>
             <input type="range" min="1" max="8" value="1" v-model="season" class="slider" style="width:80%" id="myRange">
          </div>
          
